# src/shared/api/test-generated/model/index.ts
@@ -28,4 +28,5 @@ export * from './purgeTestAccountsRequest'
 export * from './purgeTestAccountsResponse'
 export * from './seedMessagesInput'
 export * from './seedMessagesInputMarkReadFor'
+export * from './seedOfferReadyInput'
 export * from './setTestOnboardingRequest'
